# qodem

./: CMakeLists.txt
cmake/: config.h.in
source/: CMakeLists.txt  netclient.c
