set(SOURCES
    ansi.c
    atascii.c
    avatar.c
    codepage.c
    colors.c
    common.c
    console.c
    dialer.c
    emulation.c
    field.c
    forms.c
    help.c
    host.c
    input.c
    kermit.c
    keyboard.c
    modem.c
    music.c
    netclient.c
    options.c
    petscii.c
    phonebook.c
    protocols.c
    qodem.c
    screen.c
    script.c
    scrollback.c
    states.c
    translate.c
    vt100.c
    vt52.c
    xmodem.c
    zmodem.c
    ansi.h
    atascii.h
    avatar.h
    codepage.h
    colors.h
    common.h
    console.h
    dialer.h
    emulation.h
    field.h
    forms.h
    help.h
    host.h
    input.h
    kermit.h
    keyboard.h
    modem.h
    music.h
    netclient.h
    options.h
    petscii.h
    phonebook.h
    protocols.h
    qodem.h
    screen.h
    script.h
    scrollback.h
    states.h
    translate.h
    vt100.h
    vt52.h
    xmodem.h
    zmodem.h
    qcurses.h
)

add_executable(qodem ${SOURCES})
target_link_libraries(qodem ${LINK_LIBS})
